lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:25: error: ')' expected but '<-' found.
		else if(getVitesseX()<-3)
                                     ^Lander:43: error: illegal start of simple expression
	}
        ^